@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3634 utf-8
+personal_ws-1.1 en 3635 utf-8
 AAC
 AAS
 ABI
@@ -1427,6 +1427,7 @@ UUU
 UUUU
 UX
 Ubuntu
+Ugreen
 Ulf
 Ulfat
 Uncomment
